[project]
name = "data-augmentation"
version = "0.1.0"
description = "A dataset wrapper that applies random data augmentations to samples with control over the number of transformations and augmented samples generated per original sample."
authors = [
    {name = "raideno56",email = "nadirkichou@hotmail.fr"}
]
maintainers = [
    {name = "raideno56",email = "nadirkichou@hotmail.fr"}
]
homepage = "https://raideno.github.io/data-augmentation/"
documentation = "https://raideno.github.io/data-augmentation/"
repository = "https://github.com/raideno/data-augmentation"
keywords = ["pytorch-data-augmentation", "pytorch", "data-augmentation"]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pandoc (>=2.4,<3.0)"
]
packages = [
    {include = "data_augmentation", from = "."}
]
include = [
    { path = "README.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
